Objetos y funciones en JavaScript

--- a/Guia JavaScript/index.html
+++ b/Guia JavaScript/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
-    <script type="module" src="/src/MapFilterFind.js"></script>
+    <script type="module" src="/src/Objetos.js"></script>
   </body>
 </html>
