--- a/Guia-JavaScript-TypeScript/index.html
+++ b/Guia-JavaScript-TypeScript/index.html
@@ -116,7 +116,7 @@
     <a href="otraPag.html" target="_blank">Otra página</a>
 
     <!-- DESCONMENTAR PARA PROBAR LOS ARCHIVOS JS -->
-    <!-- <script type="module" src="/src/TypeScript/ClasesObjetos.ts"></script> -->
+    <script type="module" src="/src/MapFilterFind.js"></script>
 
     <!-- Los scripts deben ir abajo de los elementos HTML para poder utilizarlos -->
 
