TypeScript y Archivos en Java

--- a/Guia-Angular/src/index.html
+++ b/Guia-Angular/src/index.html
@@ -10,5 +10,6 @@
 <body>
   <!-- Aqui se va a cargar el componente principal de la aplicacion -->
   <app-root></app-root>
+  <app-personas></app-personas>
 </body>
 </html>
