--- a/Guia-JavaScript-TypeScript/index.html
+++ b/Guia-JavaScript-TypeScript/index.html
@@ -226,7 +226,7 @@
     <a href="DOM-2.html" target="_blank">Otra página</a>
 
     <!-- DESCONMENTAR PARA PROBAR LOS ARCHIVOS JS -->
-    <script type="module" src="/src/blabla.js"></script>
+    <script type="module" src="/src/Excepciones.js"></script>
 
   </body>
 </html>
