--- a/Guia-HTML/index.html
+++ b/Guia-HTML/index.html
@@ -34,7 +34,11 @@
 
     <br> <br>
 
-    <a href="/contacto.php" target="_blank" style="font-size: 20px; border: 5px solid #42032C; padding: 5px; background-color: #E6D2AA; display: inline-block;">Contacto</a>
+    <video src="https://www.w3schools.com/html/mov_bbb.mp4" controls width="300" height="200"></video>
+
+    <br> <br>
+
+    <a href="/contacto.html" target="_blank" style="font-size: 20px; border: 5px solid #42032C; padding: 5px; background-color: #E6D2AA; display: inline-block;">Contacto</a>
 
     <div style="margin-top: 15px;">
  
@@ -51,7 +55,7 @@
             <tr>
                 <td>Juan</td>
                 <td>Perez</td>
-                <td rowspan="2">2236598744</td>
+                <td rowspan="2">2216598744</td>
             </tr>
 
             <tr>
@@ -67,7 +71,7 @@
             <tr>
                 <td>Agustin</td>
                 <td>Battisti</td>
-                <td>2236064588</td>
+                <td>2266074596</td>
             </tr>
 
         </table>
@@ -92,15 +96,15 @@
         <ol type="I">
             <li>Comprar Curso</li>
             <li>Estudiar Curso</li>
-            <li>Dar clases</li>
+            <li>Crear Proyecto</li>
         </ol>
 
    </div>
 
    <div>
         <ul class="barraInicio">
-            <li class="elementoInicio"><a class="elementoInicio" href="index.php" target="_blank">Inicio</a></li>
-            <li class="elementoInicio"><a class="elementoInicio" href="contacto.php" target="_blank">Contacto</a></li>
+            <li class="elementoInicio"><a class="elementoInicio" href="index.html" target="_blank">Inicio</a></li>
+            <li class="elementoInicio"><a class="elementoInicio" href="contacto.html" target="_blank">Contacto</a></li>
         </ul>
    </div>
 
@@ -129,10 +133,7 @@
 
     <a href="#Arriba" style="margin-bottom: 20px;">Ir para arriba</a><br>
 
-    <a href="index2.php" target="_blank">Ir a la segunda parte</a><br>
-
-    <a href="script.php" target="_blank">Ir a los scripts</a>
-
+    <a href="index2.html" target="_blank">Ir a la segunda parte</a><br>
 
 </body>
 </html>
